BaseService bug fix!